--- a/slides/05-supervised-ensemble-slides.qmd
+++ b/slides/05-supervised-ensemble-slides.qmd
@@ -3,7 +3,7 @@ title: "Supervisée"
 subtitle: "Méthodes ensemblistes"
 author: "Steven Golovkine"
 lang: fr
-date: today
+date: "14 nov. 2025"
 date-format: "DD MMM YYYY"
 slide-number: c/t
 title-logo: ../include/logo-ul.png
@@ -17,105 +17,160 @@ format:
       - title-slide.html
 --- 
 
+## Plan
 
-# Méthodes ensemblistes
+<br>
 
-## Principe fondamental
+1. Généralités
 
-::: {.fragment}
-**Idée centrale**
-Combiner les prédictions de plusieurs **modèles simples** (classificateurs faibles) plutôt qu'un unique modèle complexe
-:::
+2. Bagging 
 
-::: {.incremental}
-- **Meilleure performance** globale
-- **Plus grande robustesse** au bruit
-- **Réduction du sur-ajustement**
-- **Stabilité** des prédictions améliorée
-:::
+3. Forêts aléatoires
+
+4. Boosting
+
+
+## Principe
+
+<br>
+
+Combiner les prédictions de plusieurs modèles simples (classificateurs faibles, *weak classifier*) plutôt qu'un unique modèle complexe :
+
+. . .
+
+1. Meilleure performance globale
+
+2. Plus grande robustesse au bruit
+
+3. Réduction du sur-ajustement
+
+4. Stabilité des prédictions améliorée
+
 
 ## Stratégies de combinaison
 
-::: {.incremental}
-1. **Moyenne des probabilités** prédites par chaque modèle
+<br>
 
-2. **Vote de majorité** : Classe la plus souvent prédite
 
-3. **Sélection de modèles** : Analogie avec la sélection de variables
+1. Moyenne des probabilités prédites par chaque modèle
 
-4. **Méthodes automatisées** : Bagging, boosting, forêts aléatoires
-:::
+2. Vote de majorité : Classe la plus souvent prédite
 
-# Bagging
+3. Sélection de modèles : Analogie avec la sélection de variables
 
-## Bootstrap Aggregating
+4. Méthodes automatisées : Bagging, boosting, forêts aléatoires
 
-::: {.fragment}
-**Principe**
-Construire plusieurs versions d'un même modèle sur des échantillons différents
-:::
+## Illustration 
 
-::: {.incremental}
-1. **Générer** $B$ échantillons bootstrap (tirage avec remise)
-2. **Construire** un arbre pour chaque échantillon
-3. **Obtenir** $B$ arbres de classification
-4. **Prédire** par vote de majorité ou moyenne des probabilités
-:::
+Supposons que pour un exercice de classification binaire pour une observation, trois méthodes me donnent respectivement des probabilités $0.3$, $0.505$ et $0.515$ que cette observation soit "positive" (et donc des probabilités $0.7$, $0.495$ et $0.485$ que cette observation soit "négative"). 
 
-## Avantages et évaluation
+. . .
 
-::: {.fragment}
-**Avantages principaux**
-- **Réduction de la variance** des prédictions
-- **Augmentation de la stabilité**
-:::
+1. Moyenne des probabilités : $(0.3 + 0.505 + 0.515) / 3 = 0.44 < 0.5$, donc on prédit "négatif".
 
-::: {.fragment}
-**Inconvénient**
+2. Vote de majorité: deux méthodes prédisent "positif" et une prédit "négatif", donc on prédit "positif".
+
+. . .
+
+Remarque: on peut pondérer les moyennes ou les votes !
+
+## Bagging (Bootstrap Aggregating)
+
+<br>
+
+Construire plusieurs versions d'un même modèle sur des échantillons différents.
+
+. . .
+
+Algorithme :
+
+1. Générer $B$ échantillons *bootstrap* (tirage avec remise).
+
+2. Construire un arbre pour chaque échantillon.
+
+3. Obtenir $B$ arbres de classification (ou autre).
+
+4. Prédire par vote de majorité ou moyenne des probabilités.
+
+## Bootstrap
+
+<br>
+
+Le bootstrap est une technique basée sur l'échantillonage aléatoire, ce qui permet d'estimer la distribution (échantillonale) de (presque) toutes les statistiques.
+
+
+
+## Avantages et inconvénients
+
+<br>
+
+Réduction de la variance des prédictions
+
+Augmentation de la stabilité des prédictions
+
+. . .
+
+<br>
+
 Perte d'interprétabilité des variables individuelles
-:::
 
-::: {.fragment}
-**Évaluation de l'importance des variables**
-- Sommer les réductions d'indice de Gini par variable
-- Moyenner sur tous les arbres
-- Exprimer en pourcentage relatif
-:::
+. . .
 
-# Forêts aléatoires
+<br>
 
-## Extension du bagging
+Un *bagging* d'un bon classificateur peut le rendre meilleur, un *bagging* d'un mauvais classificateur peut le rendre moins bon.
 
-::: {.fragment}
-**Problème du bagging**
-Les arbres se ressemblent (dominance des classes fréquentes)
-:::
 
-::: {.fragment}
-**Solution des forêts aléatoires**
-Introduction d'une **source supplémentaire d'aléa**
-:::
+## Évaluation de l'importance des variables
 
-::: {.fragment}
-**Mécanisme**
-À chaque division, sélectionner aléatoirement $m$ variables parmi $p$ disponibles
+<br>
 
-**Choix usuel**: $m \approx \sqrt{p}$
-:::
+1. Sommer les réductions d'indice de Gini par variable.
+
+2. Moyenner sur tous les arbres.
+
+3. Exprimer en pourcentage relatif.
+
+
+## Exemple
+
+
+## Forêts aléatoires
+
+<br>
+
+Problème du bagging : Les arbres se ressemblent (dominance des classes fréquentes).
+
+. . .
+
+Solution : Introduction d'une source supplémentaire d'aléatoire.
+
+. . .
+
+À chaque division, sélectionner aléatoirement $m$ variables parmi $p$ disponibles.
+
+. . .
+
+Choix usuel: $m \approx \sqrt{p}$.
+
 
 ## Bénéfices de la randomisation
 
-::: {.incremental}
-- **Décorrélation** des arbres construits
-- **Diversification** des modèles
-- **Amélioration** de la performance globale
-- **Robustesse** accrue
-:::
+<br>
 
-::: {.fragment}
-**Résultat**
-Meilleure généralisation que le bagging simple
-:::
+Décorrélation des arbres construits.
+
+Diversification des modèles.
+
+Amélioration de la performance globale.
+
+Robustesse aux valeurs abérrantes accrue.
+
+Meilleure généralisation que le *bagging* simple.
+
+## Algorithme
+
+## Exemple
 
 # Boosting
 
@@ -231,10 +286,12 @@ Nécessaire pour chaque paramètre afin d'éviter le sur-ajustement
 - **Applications** : Base de nombreux algorithmes modernes (XGBoost, LightGBM, etc.)
 :::
 
-## Merci pour votre attention
+## Conclusion
 
-**Questions ?**
+<br>
 
-::: {.fragment}
-*Les méthodes ensemblistes : quand l'union fait la force*
-:::
+
+
+. . .
+
+Prochaine étape → La classification non-supervisée (*clustering*)
